# parsec.py

./: .gitignore  setup.cfg
docs/: conf.py
examples/: jsonc.py  sexpr.py  test_json.py  test_sexpr.py
parsec/: __init__.py
tests/: __init__.py  test_parsec.py
tests/python_3_only/: test_generator.py
