[metadata]
name = parsec
version = 3.4
author = He Tao
author_email = sighingnow@gmail.com
url = https://github.com/sighingnow/parsec.py
description = parser combinator.
keywords = monad parser combinator
license = MIT
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Topic :: Software Development :: Compilers
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.2
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  License :: OSI Approved :: MIT License
long_description = A universal Python parser combinator library inspired by Parsec library of Haskell.
platforms = any

[options]
packages = parsec
test_suite = tests

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs
build-dir  = build
all_files  = 1

[upload_docs]
upload-dir = build/html
